PR10172 sdt.h on powerpc Error: junk at end of line: `0'

* includes/sys/sdt.h (STAP_NOP): __powerpc__ doesn't want an extra 0.

Tested-by: Mahesh Jagannath Salgaonkar <mahesh@linux.vnet.ibm.com>